--- a/assets/css/media-queries/_prefers-color-scheme.scss
+++ b/assets/css/media-queries/_prefers-color-scheme.scss
@@ -31,7 +31,14 @@
         }
     }
 
-    img[src$=".svg"]{
+    img[src$=".svg"] {
         filter: invert(100%);
+    }
+
+    kbd {
+        color: $gray-light;
+        background-color: $gray-dark;
+        box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), 0 0 0 2px #222 inset;
+
     }
 }
